--- a/admin/src/web/templates/perfilUsuario.html
+++ b/admin/src/web/templates/perfilUsuario.html
@@ -46,11 +46,23 @@
           </tr>
           <tr>
             <td>Creado</td>
-            <td>{{ user.created_at.strftime('%Y-%m-%d %H:%M') if user.created_at else '-' }}</td>
+            <td>
+              {% if user.created_at %}
+                {{ user.created_at.strftime('%d/%m/%Y %H:%M') }}
+              {% else %}
+                -
+              {% endif %}
+            </td>
           </tr>
           <tr>
             <td>Actualizado</td>
-            <td>{{ user.updated_at.strftime('%Y-%m-%d %H:%M') if user.updated_at else '-' }}</td>
+            <td>
+              {% if user.updated_at %}
+                {{ user.updated_at.strftime('%d/%m/%Y %H:%M') }}
+              {% else %}
+                -
+              {% endif %}
+            </td>
           </tr>
         </tbody>
       </table>
