mensajes de busqueda sin resultado

--- a/admin/src/web/templates/sites/deleted.html
+++ b/admin/src/web/templates/sites/deleted.html
@@ -51,7 +51,7 @@
         </table>
     </div>
 {% else %}
-    <p>No hay sitios eliminados registrados.</p>
+    <p class="empty-state-message">No hay sitios eliminados registrados.</p>
 {% endif %}
 </section>
 {% endblock %}
