--- a/admin/src/web/templates/sites/history.html
+++ b/admin/src/web/templates/sites/history.html
@@ -83,7 +83,7 @@
         {% endif %}
     </div>
 {% else %}
-    <p>No se registraron eventos para los filtros seleccionados.</p>
+    <p class="empty-state-message">No se registraron eventos para los filtros seleccionados.</p>
 {% endif %}
 </section>
 {% endblock %}
