--- a/admin/src/web/templates/sites/index.html
+++ b/admin/src/web/templates/sites/index.html
@@ -204,7 +204,7 @@
         {% endif %}
     </div>
 {% else %}
-    <p>Sin resultados</p>
+    <p class="empty-state-message">Sin resultados</p>
 {% endif %}
 
 <section class="deleted-sites-section">
